--- a/app/views/deals/_body_bestdeals.html.erb
+++ b/app/views/deals/_body_bestdeals.html.erb
@@ -102,6 +102,185 @@
 </div> 
 -->
 
+<div class="card clearfix" data-score="59" data-price="28.80">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2ETlMAT"><img src="https://m.media-amazon.com/images/I/61a9TWksbQL._AC_UL436_.jpg" alt="Dell Slim Power Adapter" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>59% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2ETlMAT">Dell Slim Power Adapter, 90-Watt</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$28.80</span><span class="ori_price">$69.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2ETlMAT">Shop Now at Amazon</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="52" data-price="67.59">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2I29Yye"><img src="https://m.media-amazon.com/images/I/71vyZdq-60L._AC_UL436_.jpg" alt="Garmin vivosmart 3" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>52% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2I29Yye">Garmin vivosmart 3 - Black, L</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$67.59</span><span class="ori_price">$139.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2I29Yye">Shop Now at Amazon</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="66" data-price="16.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/31j7zqt"><img src="https://m.media-amazon.com/images/I/915GWeL95uL._AC_UL436_.jpg" alt="Sushi Striker" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>66% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/31j7zqt">Sushi Striker: The Way of The Sushido - Nintendo Switch by Nintendo</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$16.99</span><span class="ori_price">$49.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/31j7zqt">Shop Now at Amazon</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="8" data-price="96.66">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2IrP1vG"><img src="https://m.media-amazon.com/images/I/61kPuc+pGHL._AC_UL436_.jpg" alt="Home Theater Speaker" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>8% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2IrP1vG">Monoprice 108247 5.1-Channel Home Theater Speaker System, Six</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$96.66</span><span class="ori_price">$104.70</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2IrP1vG">Shop Now at Amazon</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="62" data-price="18.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2ItSycL"><img src="https://m.media-amazon.com/images/I/71Rym+pGJTL._AC_UL436_.jpg" alt="OtterBox Samsung Galaxy S8+" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>62% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2ItSycL">OtterBox COMMUTER SERIES for Samsung Galaxy S8+ - Retail Packaging - BLACK</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$18.99</span><span class="ori_price">$49.95</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2ItSycL">Shop Now at Amazon</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="19.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2I2S2U0"><img src="https://m.media-amazon.com/images/I/6110OYAhRGL._AC_UL436_.jpg" alt="Spigen Ultra Hybrid 360 Designed " /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2I2S2U0">Spigen Ultra Hybrid 360 Designed for Apple iPhone XR Case (2018) Tempered Glass Screen Protector Included - Black</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$19.99</span><span class="ori_price">$39.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2I2S2U0">Shop Now at Amazon</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="85" data-price="29.94">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2IroheF"><img src="https://m.media-amazon.com/images/I/51uGG1rN6HL._AC_UL436_.jpg" alt="360 Degree Camera" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>85% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2IroheF">Essential 360 Degree Camera for Essential Phone</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$29.94</span><span class="ori_price">$199.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2IroheF">Shop Now at Amazon</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="78" data-price="21.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2K5ymkN"><img src="https://m.media-amazon.com/images/I/71HqeMw-nWL._AC_UL436_.jpg" alt="Wireless Bluetooth Fitness Earbuds" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>78% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2K5ymkN">Samsung Level Active Wireless Bluetooth Fitness Earbuds - Black (US Version with Warranty)</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$21.99</span><span class="ori_price">$99.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2K5ymkN">Shop Now at Amazon</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="19.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/31ivk1P"><img src="https://m.media-amazon.com/images/I/71QFABsM1cL._AC_UL320_.jpg" alt="Madden NFL 19" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/31ivk1P">Madden NFL 19 - PlayStation 4 by Electronic Arts</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$19.99</span><span class="ori_price">$39.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/31ivk1P">Shop Now at Amazon</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="66" data-price="40.24">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2K7jG4D"><img src="https://m.media-amazon.com/images/I/81JKtGaUHhL._AC_UL320_.jpg" alt="Swimline Floating Lounge Chair" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>66% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2K7jG4D">Swimline Floating Lounge Chair</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$40.24</span><span class="ori_price">$119.95</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2K7jG4D">Shop Now at Amazon</a>
+  </div>
+</div>
 
 <div class="card clearfix" data-score="38" data-price="discounted_price">
   <div class="image_box">
