--- a/app/views/deals/_body_promocode.html.erb
+++ b/app/views/deals/_body_promocode.html.erb
@@ -34,6 +34,259 @@
   </div>
  </div>
 -->
+<div class="card clearfix" data-score="50" data-price="5.97">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2IxNns7"><img src="https://m.media-amazon.com/images/I/51szSMnXUiL._SR400,400_.jpg" alt="iPhone Charger" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2IxNns7">iPhone Charger, Taymanso USB Wall Charger Power Adapter Travel Wall Plug with 2-Pack 5-Feet Cables Charge Sync </a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$5.97</span><span class="ori_price">$11.95</span></address>
+      <p><span>Take <strong>50% off at $11.95</strong> with promo code: <strong>502E168X</strong></span></p>
+      <span class="ex_date">Expiration Date : Jun 30, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2IxNns7">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="8.00">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2IyXvkK"><img src="https://m.media-amazon.com/images/I/71P0P-yu+VL._SR400,400_.jpg" alt="Bluetooth FM Transmitter for car" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2IyXvkK">Bluetooth FM Transmitter for car, Wireless FM Transmitter Radio Receiver Adapter Car Kit,with Dual USB Car Charging Ports...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$8.00</span><span class="ori_price">$15.99</span></address>
+      <p><span>Take <strong>50% off at $15.99</strong> with promo code: <strong>50FBR2TX</strong></span></p>
+      <span class="ex_date">Expiration Date : Jun 15, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2IyXvkK">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="60" data-price="9.98">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2ItQotF"><img src="https://m.media-amazon.com/images/I/51KqI4vJSOL._SR400,400_.jpg" alt="Speeds Mini Fan" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>60% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2ItQotF">YinQin Mini Handheld Fan Portable Quiet Sound Electric USB Mini Hand Fan 2000mAh Battery Operated Adjustable 3 Speeds Mini Fan</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$9.98</span><span class="ori_price">$24.95</span></address>
+      <p><span>Take <strong>60% off at $24.95</strong> with promo code: <strong>60TEGD7K</strong></span></p>
+      <span class="ex_date">Expiration Date : Jun 08, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2ItQotF">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="8.49">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2WmnzUZ"><img src="https://m.media-amazon.com/images/I/61XQEpTqgfL._SR400,400_.jpg" alt="Lint Roller Pet Hair Remover" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2WmnzUZ">Lint Roller Pet Hair Remover Fur Tape Roller Sticky Hair Remover for Clothes Dog Hair - 8 Pack </a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$8.49</span><span class="ori_price">$16.99</span>
+        <div class="tooltip_green">
+          <span>Double Discount</span>
+          <div class="tooltip-content">
+            <p>You can get extra discount by applying promotional code and get additional discount by applying coupon on the detail page of product.</p>
+          </div>
+         </div>
+      </address>
+      <p><span>Take <strong>50% off at $16.99</strong> with promo code: <strong>50FMZP28</strong></span></p>
+      <span class="ex_date">Expiration Date : Jun 08, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2WmnzUZ">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="20" data-price="11.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2MAC3kg"><img src="https://m.media-amazon.com/images/I/71+YK2-sNEL._SR400,400_.jpg" alt="Focus Extracts" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>20% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2MAC3kg">Focus Extracts | 7 Premium Mind & Alertness Nootropic Extracts for Improved Cognitive Brain Function | L-Theanine, Bacopa, Acetyl L-Tyrosine</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$11.99</span><span class="ori_price">$14.99</span></address>
+      <p><span>Take <strong>20% off at $14.99</strong> with promo code: <strong>20IGYB5M</strong></span></p>
+      <span class="ex_date">Expiration Date : Jul 05, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2MAC3kg">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="15" data-price="29.74">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2IrJeGh"><img src="https://m.media-amazon.com/images/I/81hr0cflbzL._SR400,400_.jpg" alt="Focus Fast Extreme Stimulant Supplement" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>15% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2IrJeGh">Focus Fast Extreme Stimulant Supplement + Neuro Nootropic Cognitive Brain Pill. Boost Memory, Focus & Energy. Feat: Ginkgo, Ginseng</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$29.74</span><span class="ori_price">$34.99</span></address>
+      <p><span>Take <strong>15% off at $34.99</strong> with promo code: <strong>15QHH5M9</strong></span></p>
+      <span class="ex_date">Expiration Date : Jun 27, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2IrJeGh">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="30" data-price="11.16">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2K6YY4S"><img src="https://m.media-amazon.com/images/I/71Ozj0-rNuL._SR400,400_.jpg" alt="Keto DNA Chocolate Exogenous Ketone Supplement" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>30% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2K6YY4S">Keto DNA Chocolate Exogenous Ketone Supplement | 5 Serving BHB Salts for Ketosis | Beta Hydroxybutyrate Ketones Powder</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$11.16</span><span class="ori_price">$15.95</span></address>
+      <p><span>Take <strong>30% off at $15.95</strong> with promo code: <strong>30POKW2J</strong></span></p>
+      <span class="ex_date">Expiration Date : Jun 19, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2K6YY4S">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="10" data-price="15.29">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2WwooiL"><img src="https://m.media-amazon.com/images/I/61p5WeVHPoL._SR400,400_.jpg" alt="Hangover Prevention Pills" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>10% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2WwooiL">Hangover Prevention Pills - TOP Rated Formula - Liver Support & Nutrient Replenishment, Prevent Hangovers</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$15.29</span><span class="ori_price">$16.99</span></address>
+      <p><span>Take <strong>10% off at $16.99</strong> with promo code: <strong>10NOHANGOVER</strong></span></p>
+      <span class="ex_date">Expiration Date : Jun 30, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2WwooiL">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="10" data-price="16.19">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2K6Zxvw"><img src="https://m.media-amazon.com/images/I/51Kb8AC3W9L._SR400,400_.jpg" alt="Nosame Led Shower Head" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>10% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2K6Zxvw">Nosame Led Shower Head, Ionic Filter Filtration High Pressure Water Saving 7 Colors Automatically No Batteries Needed Spray Handheld Showerheads </a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$16.19</span><span class="ori_price">$17.99</span>
+        <div class="tooltip_green">
+        <span>Double Discount</span>
+        <div class="tooltip-content">
+          <p>You can get extra discount by applying promotional code and get additional discount by applying coupon on the detail page of product.</p>
+        </div>
+       </div>
+      </address>
+      <p><span>Take <strong>10% off at $17.99</strong> with promo code: <strong>106KDVM4</strong></span></p>
+      <span class="ex_date">Expiration Date : Jun 30, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2K6Zxvw">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="25" data-price="26.24">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2EXFwDk"><img src="https://m.media-amazon.com/images/I/71Aym+nMl3L._SR400,400_.jpg" alt="Bio Bidet SlimEdge Simple Bidet Toilet Attachment" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>25% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2EXFwDk">Bio Bidet SlimEdge Simple Bidet Toilet Attachment In White with Dual Nozzle, Fresh Water Spray, Non Electric, Easy To Instal</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$26.24</span><span class="ori_price">$34.99</span></address>
+      <p><span>Take <strong>25% off at $34.99</strong> with promo code: <strong>25COMFORT</strong></span></p>
+      <span class="ex_date">Expiration Date : Jun 17, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2EXFwDk">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="12.49">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2WC55oA"><img src="https://m.media-amazon.com/images/I/613oSS83oIL._SR400,400_.jpg" alt="ImmSss Bling Metal Band" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2WC55oA">ImmSss Bling Metal Band Compatible for Apple Watch Band Series 4 40mm 44mm/ iWatch Series 3 2 1 38mm 42mm, Wristband Strap Cuff Bangle Bracelet</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$12.49</span><span class="ori_price">$24.99</span></address>
+      <p><span>Take <strong>50% off at $24.99</strong> with promo code: <strong>506TM27I</strong></span></p>
+      <span class="ex_date">Expiration Date : Jun 08, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2WC55oA">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="15" data-price="18.69">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2I3rlyL"><img src="https://m.media-amazon.com/images/I/51pzRU4q+-L._SR400,400_.jpg" alt="Blackhead Remover" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>15% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2I3rlyL">Blackhead Remover,Electric Pore Vacuum Cleaner Rechargeable Blackhead Suction Facial Comedo Acne Extractor Kit</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$18.69</span><span class="ori_price">$21.99</span></address>
+      <p><span>Take <strong>15% off at $21.99</strong> with promo code: <strong>159FQQ5O</strong></span></p>
+      <span class="ex_date">Expiration Date : Jun 16, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2I3rlyL">Use Code</a>
+  </div>
+</div>
 
 <div class="card clearfix" data-score="20" data-price="34.39">
   <div class="image_box">
