--- a/app/views/deals/bestdeals.html.erb
+++ b/app/views/deals/bestdeals.html.erb
@@ -54,7 +54,7 @@
       </div><!--./lt_cnt-->
       
       <div class="rt_cnt">
-        <h2>Best Deals We Picked On Amazon June. 08. 2019.<!-- <em>We pick the best deals from all categories of Amazon!! We just hope you like it :D</em> --></h2>
+        <h2>The Best Deals We Picked On Amazon June. 08. 2019.<!-- <em>We pick the best deals from all categories of Amazon!! We just hope you like it :D</em> --></h2>
         
         <div class="sort_box clearfix">
           <ul>
